fix(evaluation): complete member 3 workflow and align JPA with V7
Map announcements, evaluations and topic results to the Flyway schema,
enforce chair confirmation and assignment-before-grading, add student
result view and dashboard stats, remove the nested project copy, and
cover the rules with Member3BusinessRulesTest.